<resources>
    <string name="app_name">Game Explorer</string>
    <!--main,sign up and sign in and password forgot fragments -->
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">FirstName</string>
    <string name="create_an_account">Create An Account</string>
    <string name="last_name">LastName</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">back</string>

    <!--across app use -->
    <string name="todo">TODO</string>

    <!--Toast messages -->
    <string name="blank_name">please don\'t leave first or last name blank</string>
    <string name="blank_email">Don\'t leave email blank or check if its correct</string>
    <string name="blank_password">Don\'t leave password blank</string>
    <string name="password_dont_match">Password don\'t match</string>
    <string name="nothing_blank">Please don\'t leave any fields empty</string>
    <string name="less_then_6">pass word is less then 6 please have a password with more then 6 characters</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="incorrect_email_or_password">Email or password is incorrect</string>
    <string name="enter_email_address_associated_with_account">Enter Email Address Associated with Account</string>
    <string name="continue_fp">Continue</string>
    <string name="email_sent">Email Sent</string>
    <string name="check_email">Check email to for link to rest password</string>
    <string name="okay">Ok</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="games">Games</string>
    <string name="all_games">All Games</string>
    <string name="platforms">Platforms</string>
    <string name="publishers">Publishers</string>
    <string name="developers">Developers</string>
    <string name="creators">Creators</string>
    <string name="favorite_s">Favorite\'s</string>
    <string name="recently_released">Recently Released</string>
    <string name="upcoming_releases">Upcoming Releases</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="others">Others</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="view_more"><![CDATA[View More >]]></string>
    <string name="gd_description">Description</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="add">add</string>
    <string name="sort_by">Sort By:</string>
    <string name="search">Search</string>
    <string name="searchHint">Search games</string>
    <string name="game_added">Game have been saved</string>
    <string name="metacritic">metacritic</string>
    <string name="more_like_this">More Like This</string>
    <string name="games_on_this_platforms">Games on this platforms</string>
    <string name="game_count">Game Count:</string>
    <string name="delete">delete</string>
    <string name="upload">Upload</string>
    <string name="select_an_image">Select an image</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="user">user</string>
    <string name="games_in_the_same_series">Games in the same Series</string>


    <string-array name="sort_array">
        <item>Normal</item>
        <item>Name: A to Z</item>
        <item>Name: Z to A</item>
        <item>Rating Best to worst</item>
        <item>Rating Worst to Best</item>
        <item>Released: Newest</item>
        <item>Released: Oldest</item>
    </string-array>


</resources>
