<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/Home_fragment"
            android:title="@string/home"
            android:checked="true"
            />

        <item
        android:id="@+id/games_fragment"
        android:title="@string/games">
            <menu >
                <item
                    android:id="@+id/allGames_fragment"
                    android:title="@string/all_games" />

                <item
                    android:id="@+id/upcomingReleases_fragment"
                    android:title="@string/upcoming_releases" />
                <item
                    android:id="@+id/recentlyReleased_fragment"
                    android:title="@string/recently_released" />

                <item
                    android:id="@+id/topRated_fragment"
                    android:title="@string/top_rated" />

                <item
                    android:id="@+id/mostPopular_fragment"
                    android:title="@string/most_popular" />

            </menu>
        </item>

    </group>
    <item android:title="@string/others">
       <menu>
           <group android:checkableBehavior="single">
               <item
                   android:id="@+id/Platforms_fragment"
                   android:title="@string/platforms" />

               <item
                   android:id="@+id/publishers_fragment"
                   android:title="@string/publishers" />
               <item
                   android:id="@+id/developers_fragment"
                   android:title="@string/developers" />

               <item
                   android:id="@+id/creators_fragment"
                   android:title="@string/creators" />
               <item
                   android:id="@+id/favorite_fragment"
                   android:title="@string/favorite_s" />
           </group>
       </menu>
    </item>
    <item android:title="">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/settings_fragment"
                android:title="@string/settings" />

            <item
                android:id="@+id/signOut_fragment"
                android:title="@string/sign_out" />
        </group>
    </menu>
</item>

</menu>