<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/recently_released"
                android:textColor="#000000"
                android:textSize="18sp" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_recentlyReleased"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_below="@+id/textView4"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tv_vm_recentReleased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vp_recentlyReleased"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:text="@string/view_more" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_vm_recentReleased"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/upcoming_releases"
                android:textColor="#000000"
                android:textSize="18sp" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_upcomingReleases"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_below="@+id/textView6"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tv_vm_upcomingReleases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vp_upcomingReleases"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:text="@string/view_more" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_vm_upcomingReleases"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/most_popular"
                android:textColor="#000000"
                android:textSize="18sp" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_popularReleased"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_below="@+id/textView8"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tv_vm_mostPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vp_popularReleased"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:text="@string/view_more" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_topRated"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_below="@+id/tv_topRated_home"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tv_topRated_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_vm_mostPopular"
                android:layout_marginTop="8dp"
                android:text="@string/top_rated"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_vm_topRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vp_topRated"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/view_more" />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>